@@ -67,6 +67,9 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	Added tests for LabelTTF vertical alignment
 	Added tetts for Scheduler/ActionManager resume/pause all actions
 	Director doesn't raise assert when startAnimation is called twice
+	
+* Krzysztof Zablocki (http://merowing.info):
+	Added support for Depth Stencil in RenderTexture
 
 * Lam Pham (http://www.fancyratstudios.com/)
 	CCProgressTimer: Improved API
